<resources>
    <string name="app_name">RG_LA_PP_Cluedo</string>
    <!-- SharedPreferences -->
    <string name="PREFsoloGame" translatable="false">PREFsoloGame</string>
    <string name="PREFmultiGame" translatable="false">PREFmultiGame</string>
    <string name="PREFapp" translatable="false">PREFS</string>
    <string name="PREFsetttings" translatable="false">PREFsetttings</string>

    <!-- activity_main -->
    <string name="tvTituloMain">Who is the murderer?</string>
    <string name="btIniciar">Play</string>
    <string name="btReglas">Rules</string>
    <string name="btHistorial">History</string>

    <!-- activity_loggin -->
    <string name="err_CargaPartida_2">Error al cargar la partida</string>
    <string name="msg_espera">Espera a otro jugador</string>
    <string name="newSala">Create Room</string>


    <!-- activity_reglas -->
    <string name="Reglas_Intro">HOW TO PLAY</string>
    <string name="Start">START</string>
    <string name="texto_start">
        The game has: \n
        - 6 character cards \n
        - 6 weapon cards \n
        - 6 room cards \n
    </string>
    <string name="texto_start2">
       At the start the player will choose who wants to be between the characters.
    </string>
    <string name="Game">GAME</string>
    <string name="texto_Game">The player will choose one card of each type (character, weapon
        and room) then it will tap the “Suspect” button. \n
        If 1 or more between the chosen ones are wrong, one of them will be shown to the player.
        Next, the player will make a suspect suggestion again
        with another combination of cards. \n
        In case of choosing the 3 cards correctly, the player wins! \n \n
        At the beginning the elections of cards will be made randomly, but along the game
        continue and cards are shown it will be easier to find the cards involved in the
        murder.</string>
    <string name="txt_sesion">Session already started</string>
    <string name="txt_noSesion">No session started</string>
    <string name="err_sesionSolo">To play you ONLY have to be logged in</string>
    <string name="err_sesionMulti">To play MULTI you must be logged in</string>
    <string name="err_CargaPartida">Game loading error</string>
    <string name="txt_sesion_inicio">Sesión iniciada</string>


    <!-- activity_historial -->
    <string name="tvTituloPartidas">History</string>
    <string name="tvTTNull">Playing</string>
    <string name="tvResultadoGanar">Win</string>
    <string name="tvResultadoPerder">Lose</string>
    <string name="btBorrar">Delete</string>
    <string name="msjNoPartidas">There aren\'t saved games</string>
    <string name="err_Sesion">No session started</string>
    <!-- activity_juego -->
    <string name="btSospechar">Suspect</string>
    <string name="selecionaste">Selecionaste</string>
    <string name="btRendirse">Give Up</string>
    <string name="tvPersonaje">Murder</string>
    <string name="tvArma">Weapon</string>
    <string name="tvHabitacion">Room</string>
    <string name="tvCont">Opportunities:</string>
    <string name="msj3Cartas">Chose 3 cards</string>
    <string name="btNext">Continuar</string>
    <string name="txt_recuperando">Retrieving data …</string>
    <string name="txt_sesion_si">Session already started</string>
    <string name="txt_sesion_no">No session started</string>
    <string name="txt_login">LOG IN</string>
    <string name="txt_sign_in">SIGN IN</string>
    <string name="err_error_sesion">failed to login</string>
    <string name="txt_login_in">Logging in</string>
    <string name="err_email">The email is not valid.</string>
    <string name="err_noExisteEmail">Dont leave a user with that email</string>
    <string name="err_contraseña">Incorrect password.</string>
    <string name="txt_validado">Validado Con UserName</string>
    <string name="err_validadoEmail">Username cannot have @</string>
    <string name="txt_usuario_ok">User created</string>
    <string name="txt_puntos">Points</string>
    <string name="err_email_si">This email address is already registered.</string>
    <string name="txt_cancel">Cancelado</string>
    <string name="txt_email">Email</string>
    <string name="txt_Psolo">Solo Games</string>
    <string name="txt_Pmulti">Multiplayer games</string>
    <string name="valideCampos">You must fill all the fields</string>
    <string name="err_inico_Sesion">Failed to retrieve session. log back in</string>
    <string name="espera">Wait another player</string>
    <string name="esperaTuTurno">Wait your turn</string>
    <!-- MatchHelper -->
    <string name="tvCardDefault">Carta</string>
    <!-- activity_elegir_personaje -->
    <string name="tvPers1">Amapola</string>
    <string name="tvPers2">Blanco</string>
    <string name="tvPers3">Celeste</string>
    <string name="tvPers4">Mora</string>
    <string name="tvPers5">Prado</string>
    <string name="tvPers6">Rubio</string>
    <!-- activity_elegir_arma -->
    <string name="tvArma1">Candelabra</string>
    <string name="tvArma2">String</string>
    <string name="tvArma3">Tool</string>
    <string name="tvArma4">Handgun</string>
    <string name="tvArma5">Dagger</string>
    <string name="tvArma6">Pipe</string>
    <!-- activity_elegir_habitación -->
    <string name="tvHab1">Bathroom</string>
    <string name="tvHab2">Dining Room</string>
    <string name="tvHab3">Bedroom</string>
    <string name="tvHab4">Study</string>
    <string name="tvHab5">Garage</string>
    <string name="tvHab6">Patio</string>

    <!-- dialog_salir -->
    <string name="msjSalir">Are you sure you want to exit ClueCards?</string>
    <string name="btNgtv">Cancel</string>
    <string name="btPstv">Okay</string>
    <string name="btVolverMain">Menú</string>
    <!-- activity_chat -->
    <string name="etMessage">Write a message</string>

    <!-- activity_login -->
    <string name="nameUser">NameUser</string>
    <string name="switchMusica">Musica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- activity_store -->
    <string name="tienda">Tienda</string>
    <string name="button_text2">100</string>
    <string name="button_text1">200</string>
    <string name="button_text3">300</string>
    <string name="pista">==================== Pistas ====================</string>
    <string name="avatares">==================== Avatares ====================</string>
    <string name="user">Usuario</string>
    <string name="store">Tienda</string>
    <string name="puntos">points:</string>
    <string name="no_points">No tienes puntos suficientes</string>
    <string name="no_play_sin_login">No se puede comprar sin iniciar sesion</string>
    <string name="validacion_ok">¿Estas seguro que desea comprarlo?</string>
    <string name="historial">Historial</string>
    <string name="juego">Juego</string>
    +    <!-- TODO: Remove or change this placeholder text -->
</resources>