<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_ok">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/R_margen"
            tools:context=".ReglasActivity">

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Reglas_Intro"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/R_titulo"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26" />

            <TextView
                android:id="@+id/titulo_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Game"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/R_subtitulo"
                android:textStyle="bold"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/texto_start2" />

            <TextView
                android:id="@+id/titulo_start3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Start"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/R_subtitulo"
                android:textStyle="bold"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo1" />

            <TextView
                android:id="@+id/texto_start2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:text="@string/texto_start"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/R_parrafo"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_start3" />

            <!--
        <TextView
            android:id="@+id/texto_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/texto_start2"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/R_parrafo"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_start2" />
        -->

            <TextView
                android:id="@+id/text_Game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/texto_Game"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/R_parrafo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_start" />

            <ImageView
                android:id="@+id/ivTop"
                android:layout_width="@dimen/R_imgAncho"
                android:layout_height="@dimen/R_imgAlto"
                app:layout_constraintBottom_toTopOf="@+id/titulo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pablo_reglas" />

            <Button
                android:id="@+id/btMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btVolverMain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Game" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>